examples/test/testpolicy10810.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10810
  namespace: namespace231
spec:
  podSelector:
    matchLabels:
      key23: value18
      key6: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value41
          key20: value14
          key0: value29
      podSelector:
        matchLabels:
          key28: value27
          key0: value5
